tests/sksl/errors/ReservedNameSampler1DShadow.glsl
### Compilation failed:

error: 1: 'sampler1DShadow' is a reserved word
int sampler1DShadow;
    ^^^^^^^^^^^^^^^
1 error
